--- a/diffeq.lyx
+++ b/diffeq.lyx
@@ -245,7 +245,11 @@ ALSO BOX YOUR RESULTS
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $y1(t)v''+[2y'1(t)+p(t)y1(t)]v'=g(t).$
+\begin_inset Formula 
+\[
+y_{1}(t)v''+[2y'1(t)+p(t)y1(t)]v'=g(t).
+\]
+
 \end_inset
 
 
@@ -254,7 +258,7 @@ ALSO BOX YOUR RESULTS
 \begin_layout Standard
 \begin_inset Formula 
 \[
-y=v(t)y1(t)
+y=v(t)y_{1}(t)
 \]
 
 \end_inset
@@ -263,7 +267,15 @@ y=v(t)y1(t)
 \end_layout
 
 \begin_layout Section
-General Solution
+IVP
+\end_layout
+
+\begin_layout Standard
+Okay
+\end_layout
+
+\begin_layout Section
+Homogeneous equations
 \end_layout
 
 \begin_layout Standard
@@ -753,11 +765,12 @@ where
 \end_layout
 
 \begin_layout Section
-Method of Undetermined Coefficients
+Partial Equations
 \end_layout
 
 \begin_layout Standard
-Given the equation:
+Solved using the Method of Undetermined Coefficients.
+ Given the equation:
 \end_layout
 
 \begin_layout Standard
@@ -772,7 +785,7 @@ y''+2y'+5y=3\sin2t
 \end_layout
 
 \begin_layout Standard
-Find its fundamental solutions:
+Find its fundimental solutions:
 \end_layout
 
 \begin_layout Standard
@@ -1012,7 +1025,7 @@ Y=\frac{3}{17}\sin2t-\frac{12}{17}\cos2t
 \begin_layout Standard
 \begin_inset Formula 
 \[
-y=c_{1}e^{-t}\cos2t+c_{2}e^{-t}\sin2t+\frac{3}{17}\sin2t-\frac{12}{17}\cos2t
+y=C_{1}e^{-t}\cos2t+C_{2}e^{-t}\sin2t+\frac{3}{17}\sin2t-\frac{12}{17}\cos2t
 \]
 
 \end_inset
@@ -1330,7 +1343,7 @@ general solution
 \begin_layout Standard
 \begin_inset Formula 
 \[
-y=\frac{x^{7}}{6}+c_{1}x+c_{2}x^{3}
+y=\frac{x^{7}}{6}+C_{1}x+C_{2}x^{3}
 \]
 
 \end_inset
@@ -1339,7 +1352,7 @@ y=\frac{x^{7}}{6}+c_{1}x+c_{2}x^{3}
 \end_layout
 
 \begin_layout Section*
-More notes
+Ratio Test
 \end_layout
 
 \begin_layout Standard
@@ -1374,23 +1387,23 @@ Converges if
 , the test is inconclusive.
 \end_layout
 
-\begin_layout Section*
+\begin_layout Section
 Series Solutions Near an Ordinary Point
 \end_layout
 
 \begin_layout Standard
 Question: how do you take the derivative of a sum? Differentiate the terms.
  This shifts the index up by one.
- Note Taking the derivative of a power series does not change its radius
+ Note: Taking the derivative of a power series does not change its radius
  of convergence.
 \end_layout
 
-\begin_layout Subsection*
-A problem
+\begin_layout Subsection
+Examples
 \end_layout
 
 \begin_layout Standard
-Starting with 
+Start with:
 \end_layout
 
 \begin_layout Standard
@@ -1823,10 +1836,6 @@ p(x)=\frac{x}{1}\qquad q(x)=\frac{1}{1}
 
 \begin_layout Subsection*
 Series Solutions Bounds
-\end_layout
-
-\begin_layout Standard
-ok
 \end_layout
 
 \begin_layout Standard
@@ -2504,8 +2513,178 @@ Note that
  differing in their value at a single point.
 \end_layout
 
-\begin_layout Section*
-what
+\begin_layout Subsection
+Examples
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+L\left\{ f'(t)\right\} =s\cdotp L\left\{ f(t)\right\} -f\left(0\right)
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+L\left\{ f''(t)\right\} =s^{2}\cdot L\left\{ f(t)\right\} -s\cdot f\left(0\right)-f'\left(0\right)
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+With Laplace Transform:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+y''-y'-2y=0\qquad y\left(0\right)=1,y'(0)=0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+L\left\{ y''(t)\right\} -L\left\{ y'(t)\right\} -2L\left\{ y(t)\right\} =0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+\left(s^{2}\cdotp L\left\{ y\right\} -s\cdot y\left(0\right)-y'\left(0\right)\right)-\left(s\cdot L\left\{ y\right\} -y(0)\right)-2L\left\{ y\right\} =0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+L\left\{ y\right\} \left(s^{2}-s-2\right)+y\left(0\right)\left(-s+1\right)-y'\left(0\right)=0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+L\left\{ y\right\} \left(s^{2}-s-2\right)-s+1=0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+L\left\{ y\right\} =\frac{s-1}{s^{2}-s-2}=\frac{s-1}{\left(s-2\right)\left(s+1\right)}=\frac{a}{s-2}+\frac{b}{s+1}=\frac{a\left(s+1\right)+b\left(s-2\right)}{\left(s-2\right)\left(s+1\right)}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Solving for 
+\begin_inset Formula $a$
+\end_inset
+
+ and 
+\begin_inset Formula $b$
+\end_inset
+
+:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{eqnarray*}
+s-1 & = & a\left(s+1\right)+b\left(s-2\right)\\
+ & = & s(a+b)+(a-2b)
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+a=\frac{1}{3}\qquad b=\frac{2}{3}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Solve equation using a known Laplace transform:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+L\left(e^{at}\right)=\frac{1}{s-a},\qquad s>a
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+F\left(s\right)=\frac{a}{s-2}+\frac{b}{s+1}=\frac{1}{3}\left(\frac{1}{s-2}\right)+\frac{2}{3}\left(\frac{1}{s+1}\right)
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{eqnarray*}
+L^{-1}\left\{ F\left(s\right)\right\}  & = & L^{-1}\left\{ \frac{1}{3}\left(\frac{1}{s-2}\right)\right\} +L^{-1}\left\{ \frac{2}{3}\left(\frac{1}{s+1}\right)\right\} \\
+ & = & \frac{1}{3}L^{-1}\left(\frac{1}{s-2}\right)+\frac{2}{3}L^{-1}\left(\frac{1}{s+1}\right)\\
+ & = & \frac{1}{3}e^{2t}+\frac{2}{3}e^{-t}
+\end{eqnarray*}
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section
+Linear Systems
 \end_layout
 
 \begin_layout Standard
@@ -2571,14 +2750,29 @@ a,b,c,d are constants.
 
 \end_layout
 
+\begin_layout Subsection
+Non-homogeneous Systems
+\end_layout
+
 \begin_layout Standard
-Nonhomogeneous system.
- 
+Almost the same.
+\end_layout
+
+\begin_layout Standard
+We have a complicated 
+\begin_inset Formula $x'$
+\end_inset
+
+ differential.
+ Plug into (*) and see what we get (cry)
+\end_layout
+
+\begin_layout Subsection
+Examples
 \end_layout
 
 \begin_layout Subsubsection
-example #1.
- solve:
+Example 1
 \end_layout
 
 \begin_layout Standard
@@ -2638,7 +2832,15 @@ Call this eqation (*).
 
 \begin_layout Standard
 Plug this into the first equation.
- We don't pay attention to the IVP until we have C and C2.
+ We don't pay attention to the IVP until we have 
+\begin_inset Formula $C_{1}$
+\end_inset
+
+ and 
+\begin_inset Formula $C_{2}$
+\end_inset
+
+.
  Solving it generally for now.
 \end_layout
 
@@ -2720,7 +2922,7 @@ What is
 \begin_inset Formula $-\frac{dy}{dt}$
 \end_inset
 
-? Differnetiate 
+? Differentiate:
 \end_layout
 
 \begin_layout Standard
@@ -2795,12 +2997,8 @@ C_{2} & = & -\frac{1}{3}
 
 \end_layout
 
-\begin_layout Standard
-And we'll do another one.
-\end_layout
-
 \begin_layout Subsubsection
-example 2
+Example 2
 \end_layout
 
 \begin_layout Standard
@@ -2916,23 +3114,6 @@ x'=e^{t}\left(C_{1}+C_{2}+C_{2}t\right)
 
 \begin_layout Standard
 Now working with a nonhomogeneous solution
-\end_layout
-
-\begin_layout Subsubsection
-Non-homogeneous sysstems
-\end_layout
-
-\begin_layout Standard
-Almost the same.
-\end_layout
-
-\begin_layout Standard
-We have a complicated 
-\begin_inset Formula $x'$
-\end_inset
-
- differential.
- Plug into (*) and see what we get (cry)
 \end_layout
 
 \begin_layout Section
@@ -5522,6 +5703,217 @@ Elementary Laplace Transforms
 \end_inset
 
 
+\end_layout
+
+\begin_layout Section
+Test Questions
+\end_layout
+
+\begin_layout Subsection
+Test 1
+\end_layout
+
+\begin_layout Standard
+1.
+ Solve IVP:
+\begin_inset Formula 
+\[
+y'=2y^{2}+xy^{2}\qquad y(0)=1
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+2.
+ Solve: 
+\begin_inset Formula 
+\[
+ty'-y=t^{2}e^{-t}\qquad t>0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+3.
+ Solve: 
+\begin_inset Formula 
+\[
+y'+\frac{2}{t}y=\frac{\cos t}{t^{2}}\qquad y\left(\pi\right)=0\qquad t>0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+4.
+ Solve after transforming into homogeneous: 
+\begin_inset Formula 
+\[
+\frac{dy}{dt}=\frac{y-4x}{x-y}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+5.
+ Solve after transforming into homogeneous: 
+\begin_inset Formula 
+\[
+x^{2}\frac{dy}{dx}=x^{2}+3xy+y^{2}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+6.
+ Solve the exact(?) equation:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+\left(\frac{\sin2x}{y}+x\right)dx+\left(y-\frac{\sin x}{y^{2}}\right)dy=0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+7.
+ Solve Bernoulli equation with initial value:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+y'+\frac{1}{x+1}y=-y^{2}\qquad y(0)=1
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
+Test 2
+\end_layout
+
+\begin_layout Standard
+1.
+ If the Wronskian of 
+\begin_inset Formula $f$
+\end_inset
+
+ and 
+\begin_inset Formula $g$
+\end_inset
+
+ is 
+\begin_inset Formula $t\cos t-\sin t$
+\end_inset
+
+, and if 
+\begin_inset Formula $u=f+3g$
+\end_inset
+
+, 
+\begin_inset Formula $v=f-g$
+\end_inset
+
+, find the Wronskian of 
+\begin_inset Formula $u$
+\end_inset
+
+ and 
+\begin_inset Formula $v$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+2.
+ Find the general solution of the given differential equation.
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+y''-2y'+6y=0
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+3.
+ Find the solution of the given initial value problem.
+ Sketch the graph of the solution and describe its behavior for increasing
+ 
+\begin_inset Formula $t$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+a) 
+\begin_inset Formula $y''+4y=0\quad y(0)=0\quad y'(0)=1$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+b) 
+\begin_inset Formula $y''-2y'+5y=0\quad y\left(\frac{\pi}{2}\right)=0\quad y'(\frac{\pi}{2})=2$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+c) 
+\begin_inset Formula $9y''-12y+4y=0\quad y(0)=2\quad y'(0)=-1$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+4.
+ Given: 
+\begin_inset Formula $y_{1}=t^{2}$
+\end_inset
+
+ is a solution of differential equation 
+\begin_inset Formula $t^{2}y''-4ty'+6y=0$
+\end_inset
+
+, 
+\begin_inset Formula $t>0$
+\end_inset
+
+ .
+ Use the method of reduction of order to find a second solution.
 \end_layout
 
 \end_body
